deploy.yaml
<<<<<<< HEAD
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: doc-insights
  labels:
    app: doc-insights
  name: anomaly-detector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doc-insights
  template:
    metadata:
      labels:
        app: doc-insights
    spec:
      containers:
        - envFrom:
           - configMapRef: 
              name: cm-doc-insights
          image: 407125827522.dkr.ecr.us-east-1.amazonaws.com/banking-anomalies:latest
          imagePullPolicy: Always
          name: anomaly-detector
          ports:
            - containerPort: 8000
              protocol: TCP
          resources:
            limits:
              memory: 1048M
            requests:
              memory: 1048M

---
apiVersion: v1
kind: Service
metadata:
  namespace: doc-insights
  labels:
    app: doc-insights
  name: anomaly-detector
spec:
  selector:
    app: doc-insights
  type: ClusterIP
  ports:
   -  name: anomaly-detector
      port: 80
      targetPort: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: doc-insights
  name: banking.infoapps.io
  labels:
    ingres-controller: nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - banking.infoapps.io
    secretName: banking-anomalies-tls
      
  rules:
  - host: banking.infoapps.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: anomaly-detector
            port:
              number: 80 
=======
apiVersion: v1
kind: ConfigMap
metadata:
  labels:
    app: ia-agent
  name: cm-ia-agent
  namespace: ia-agent
data:
  DUMMY_KEY: DUMMY_VALUE
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ia-agent
  labels:
    app: ia-agent
  name: ia-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ia-agent
  template:
    metadata:
      labels:
        app: ia-agent
    spec:
      containers:
        - envFrom:
          - configMapRef: 
              name: cm-ia-agent
          image: 407125827522.dkr.ecr.us-east-1.amazonaws.com/ia-agent:latest
          imagePullPolicy: Always
          name: ia-agent
          ports:
            - containerPort:5000
              protocol: TCP
          resources:
            limits:
              memory: 1048M
            requests:
              memory: 1048M

---
apiVersion: v1
kind: Service
metadata:
  namespace: ia-agent
  labels:
    app: ia-agent
  name: ia-agent
spec:
  selector:
    app: ia-agent
  type: ClusterIP
  ports:
   -  name: ia-agent
      port: 80
      targetPort:5000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: ia-agent
  name: ia-agents.infoapps.io
  labels:
    ingres-controller: nginx
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - ia-agents.infoapps.io
    secretName: ia-agents-tls
      
  rules:
  - host: ia-agents.infoapps.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ia-agent
            port:
              number: 80
>>>>>>> 761f0fc443c134e584c6727ef453c3c94cb529cd
